Footer component updated.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -208,5 +208,6 @@
    "featureDescription": "توضیحات ویژگی باید در این قسمت نوشته شود",
    "copyright": "کپی رایت",
    "companyName":"نام شرکت",
-   "allRightsReserved":"تمامی حقوق محفوظ است"
+   "allRightsReserved":"تمامی حقوق محفوظ است",
+   "quickAccess":"دسترسی سریع"
 }
