footer component updated.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -209,5 +209,7 @@
    "copyright": "کپی رایت",
    "companyName":"نام شرکت",
    "allRightsReserved":"تمامی حقوق محفوظ است",
-   "quickAccess":"دسترسی سریع"
+   "quickAccess":"دسترسی سریع",
+   "socialNetworks":"شبکه های اجتماعی",
+   "certifications":"گواهی نامه ها",
 }
