some new localization enteris added.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -212,4 +212,5 @@
    "quickAccess":"دسترسی سریع",
    "socialNetworks":"شبکه های اجتماعی",
    "certifications":"گواهی نامه ها",
+   "blog":"بلاگ"
 }
