--- a/client/public/locales/en/common.json
+++ b/client/public/locales/en/common.json
@@ -19,15 +19,16 @@
     "_blank": "Open In New Window",
     "persian": "Persian",
     "english": "English",
-    "contentBlock": "بلاک محتوا",
-   "events": "events",
-   "mostCommentedPostList": "Most Commented Post List",
-   "mostPopularPostList": "Most Popular Post List",
-   "lastPostList": "Last Post List",
-   "readMore": "Read More ...",
-   "feature": "Feature Title",
-   "featureDescription": "Feature Description Should Write Here",
-   "copyright": "CopyRight",
-   "companyName":"Company Name",
-   "allRightsReserved":"All Rights Reserved"
+    "contentBlock": "content Block",
+    "events": "events",
+    "mostCommentedPostList": "Most Commented Post List",
+    "mostPopularPostList": "Most Popular Post List",
+    "lastPostList": "Last Post List",
+    "readMore": "Read More ...",
+    "feature": "Feature Title",
+    "featureDescription": "Feature Description Should Write Here",
+    "copyright": "CopyRight",
+    "companyName":"Company Name",
+    "allRightsReserved":"All Rights Reserved",
+    "blog":"Blog"
 }
