navbar menu updated.

--- a/client/public/locales/en/common.json
+++ b/client/public/locales/en/common.json
@@ -30,5 +30,6 @@
     "copyright": "CopyRight",
     "companyName":"Company Name",
     "allRightsReserved":"All Rights Reserved",
-    "blog":"Blog"
+    "blog":"Blog",
+    "relatedPosts":"Related Posts"
 }
