--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -212,5 +212,6 @@
    "quickAccess":"دسترسی سریع",
    "socialNetworks":"شبکه های اجتماعی",
    "certifications":"گواهی نامه ها",
-   "blog":"بلاگ"
+   "blog":"بلاگ",
+   "relatedPosts":"نوشته های مرتبط"
 }
