some localization enteris added.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -213,5 +213,7 @@
    "socialNetworks":"شبکه های اجتماعی",
    "certifications":"گواهی نامه ها",
    "blog":"بلاگ",
-   "relatedPosts":"نوشته های مرتبط"
+   "relatedPosts":"نوشته های مرتبط",
+   "profile":"پروفایل",
+   "logout":"خروج"
 }
