contentBlocl service updated.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -181,7 +181,7 @@
    "postImage": "تصویر های نوشته",
    "postTag": "برچسب های نوشته",
    "relatedPost": "نوشته های مرتبط",
-   "menuItem": "آیتم های نوشته",
+   "menuItem": "آیتم های فهرست",
    "iconCssClass": "کلاس css آیکون",
    "slugUrl": "آدرس SEO",
    "shortDescription": "توضیح کوتاه",
