load admin menu based on user roles added.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -215,5 +215,6 @@
    "blog":"بلاگ",
    "relatedPosts":"نوشته های مرتبط",
    "profile":"پروفایل",
-   "logout":"خروج"
+   "logout":"خروج",
+   "path":"مسیر"
 }
