some blogPostcomment component localization added.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -226,6 +226,7 @@
    "subscribeUs":"عضویت در خبرنامه",
    "subscribe":"اشتراک",
    "submit":"ارسال",
+   "comment":"نظر",
    "comments":"نظرات"
    
 }
