some localization enteris added.

--- a/client/public/locales/en/common.json
+++ b/client/public/locales/en/common.json
@@ -38,5 +38,6 @@
     "socialNetworks":"Social Networks",
     "certifications":"Certifications",
     "aboutUs":"About Us",
-    "features":"Features"
+    "features":"Features",
+    "noCommentRegistered":"No Comment Registered"
 }
