some localization enteris added.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -227,6 +227,7 @@
    "subscribe":"اشتراک",
    "submit":"ارسال",
    "comment":"نظر",
-   "comments":"نظرات"
+   "comments":"نظرات",
+   "noCommentRegistered": "نظری ثبت نشده است"
    
 }
