cookie style and translation uodated.

--- a/client/public/locales/fa/common.json
+++ b/client/public/locales/fa/common.json
@@ -220,6 +220,7 @@
    "login":"ورود",
    "signUp":"ثبت نام",
    "or":"یا",
+   "ok":"تایید",
    "googleLoginFailed":"خطا در ورود با حساب کاربری گوگل ",
    "forgetPassword":"فراموشی رمز عبور ",
    "readBlogOnline":"مشاهده نوشته",
@@ -231,6 +232,6 @@
    "accepted":"تایید شده",
    "rejected":"رد شده",
    "comments":"نظرات",
-   "noCommentRegistered": "نظری ثبت نشده است"
-   
+   "noCommentRegistered": "نظری ثبت نشده است",
+   "cookieText": "وب سایت ما از کوکی ها برای شخصی سازی محتوا و تجزیه و تحلیل ترافیک ما استفاده می کند که ممکن است منجر به نمایه سازی شود."
 }
